# OpenEnv-MailTriage

./: .gitignore  Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: email_templates.json
env/: __init__.py  email_generator.py  env.py  graders.py  models.py  rewards.py
server/: app.py
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_env.py  test_graders.py  test_models.py
