[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mailtriage-env"
version = "1.0.0"
description = "A real-world business email triage and response simulation environment"
authors = [
  { name="mailtriage-team" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "faker>=24.0.0",
    "numpy>=1.26.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "openenv-core"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0"
]

[project.scripts]
server = "server.app:main"
